# solanaGate

./: .gitignore  Cargo.toml  README.md
clients/gateway-cli/: Cargo.toml
clients/gateway-cli/src/: main.rs
docs/plans/: 2026-02-25-onchain-api-gateway-implementation.md
programs/onchain_gateway/: Cargo.toml
programs/onchain_gateway/src/: error.rs  instruction.rs  lib.rs  logic.rs  processor.rs  state.rs
programs/onchain_gateway/tests/: consume_tests.rs  instruction_tests.rs  logic_tests.rs
