[workspace]
members = [
  "programs/onchain_gateway",
  "clients/gateway-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["solagate"]

[workspace.dependencies]
borsh = { version = "1.5.7", features = ["derive"] }
clap = { version = "4.5.60", features = ["derive"] }
solana-client = "2.3.13"
solana-sdk = "2.3.1"
solana-program = "2.3.0"
thiserror = "2.0.17"
